# agri-harvest-cameroon

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  database.py  settings.py  yaml_loader.py
config/json/: agricultural_taxonomy.json  csv_schemas_by_crop.json  irad_data_infrastructure.json  netcdf_agricultural_schema.json  remote_sensing_schema.json  satellite_data_sources_international.json  soil_data_schema.json  weather_data_schema.json
config/schema/: __init__.py  crop_schema.py  soil_schema.py  weather_schema.py
config/yaml/: agriculture.yaml  climate_sources.yaml  geography.yaml  models_v0.yaml  models_v1.yaml
data/collectors/: __init__.py  base.py  chirps.py  terraclimate.py  validation.py  variable_mapping.py
data/processing/: __init__.py  aggregation.py  export.py
docs/source/: api_reference.md  architecture.md  conf.py  configuration.md  index.rst  models.md  schemas.md
models/: __init__.py  config.py  data_loader.py  estimators.py  evaluator.py  feature_analysis.py  persistence.py  predict.py  preprocessing.py  trainer.py
models/v1/: __init__.py  config.py  convert_parquet.py  data_loader.py  estimators.py  evaluator.py  feature_analysis.py  persistence.py  predict.py  preprocessing.py  (+3 more)
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  data_generation_notebook.ipynb
scripts/: collect_climate.py
tests/: data_generation_notebook.ipynb
utils/: __init__.py  constants.py  date_utils.py  file_utils.py  geospatial_utils.py
(+11 files in other folders)
