[project]
name = "cameroon-agricultural-data"
version = "2.0.0"
description = "AI platform for tropical agriculture in Cameroon"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.3.0",
    "pymongo>=4.15.0",
    "motor>=3.3.0",
    "numpy>=1.24.0",
    "pandas>=2.3.2",
    "notebook>=7.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "polars>=0.20.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "optuna>=3.3.0",
    "shap>=0.43.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
]
geo = [
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "geopy>=2.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
]
